--- a/index.html
+++ b/index.html
@@ -49,7 +49,16 @@
             &#x25a1; <!-- unchecked -->
           {{/if}}
         </span>
-        <span {{bind-attr class=":col-md-9 :item-text todo.completed"}}>{{todo.text}}</span>
+
+        <span {{bind-attr class=":col-md-9 :item-text"}}>
+          {{#if _inEditMode}}
+            {{!--<input type=text {{bind-attr class=":col-md-9 :item-text-edit" value=todo.text}}> --}}
+            {{todo-item-edit value=todo.text done="editComplete"}}
+          {{else}}
+            <span {{bind-attr class="todo.completed"}} {{action "edit" todo}}  title="Click to edit.">{{todo.text}}</span>
+          {{/if}}        
+        </span>
+
         <span class="col-md-2 item-edit">
           <span {{action "edit"   todo}}> &#9998;  </span> 
           <span {{action "delete" todo}}> &#10007; </span>
@@ -57,6 +66,8 @@
       </div>
     </script>
     
-
+    <script type="text/x-handlebars" data-template-name="components/todo-item-edit">
+      <input type="text" {{bind-attr value=value}} {{action "done" on="focusOut"}}>
+    </script>
   </body>
 </html> 
