--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Ember.js • TodoMVC</title>
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="styles/app.css">
-    
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="bower_components/handlebars/handlebars.js"></script>
     <script type="text/javascript" src="bower_components/ember/ember.js"></script>
-<script type="text/javascript" src="bower_components/ember-data/ember-data.js"></script>
+    <script type="text/javascript" src="bower_components/ember-data/ember-data.js"></script>
     <script type="text/javascript" src="scripts/app.js"></script>
-
   </head>
   <body>
     <script type="text/x-handlebars">
@@ -23,16 +22,19 @@
 
     <script type="text/x-handlebars" data-template-name="notebooks">
         <div class="row" id="todos">
-          <div class="col-md-4" id="side-bar">
+          <div class="col-md-3" id="side-bar">
             <div>Your Notebooks:</div>
-            <ul>
+            <ul class="nav nav-pills nav-stacked">
             {{#each}}
-              <li>{{#link-to "notebook" this}} {{name}} {{/link-to}}</li>
+              {{#link-to "notebook" this tagName="li"}}
+                {{#link-to "notebook" this}}
+                  {{name}}
+                {{/link-to}}
+              {{/link-to}}
             {{/each}}
-            </ul>
-            
+            </ul>            
           </div>
-          <div class="col-md-8" id="notebook">
+          <div class="col-md-9" id="notebook">
             {{outlet}}
           </div>
         </div>
@@ -40,7 +42,6 @@
 
     <script type="text/x-handlebars" data-template-name="notebook">
         <div class="add-item row">
-          <h3>{{name}}</h3>
           <form id="add-item-form">
             <input type="text" class="col-md-10 add-item-text glowing-border" placeholder="What needs to be done?">   
             <button type=submit class="btn btn-primary add-item-button" {{action "addTodo"}}>Add</button>
@@ -68,7 +69,7 @@
 
     <script type="text/x-handlebars" data-template-name="components/todo-item">
       <div class="row">
-        <span {{bind-attr class=":col-md-1 :item-state todo.completed:completed:incomplete"}} {{action "toggleComplete" todo}} role=button>
+        <span {{bind-attr class=":col-xs-1 :item-state todo.completed:completed:incomplete"}} {{action "toggleComplete" todo}} role=button>
           {{#if todo.completed}}
             &#x2713; <!--checked-->
           {{else}}
@@ -76,7 +77,7 @@
           {{/if}}
         </span>
 
-        <span {{bind-attr class=":col-md-9 :item-text"}}>
+        <span {{bind-attr class=":col-xs-9 :item-text"}}>
           {{#if _inEditMode}}
             {{input value=text class="glowing-border" focus-out="editComplete" autofocus=true}}
           {{else}}
@@ -84,7 +85,7 @@
           {{/if}}        
         </span>
 
-        <span class="col-md-2 item-edit">
+        <span class="col-xs-2 item-edit">
           <span {{action "edit"   todo}}> &#9998;  </span> 
           <span {{action "delete" todo}}> &#10007; </span>
         </span>
