--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
           <div class="col-md-7"><h3>Notebook: {{name}}</h3></div>
           <div class="col-md-5">
             <div class="btn-group" id="filters">
-              {{#link-to "notebook.all" tagName="button" class="btn btn-default"}} All {{/link-to}}
-              {{#link-to "notebook.active" tagName="button" class="btn btn-default"}} Active {{/link-to}}
-              {{#link-to "notebook.completed" tagName="button" class="btn btn-default"}} Completed {{/link-to}}
+              {{#link-to "notebook.all" tagName="button" class="btn btn-default btn-sm"}} All {{/link-to}}
+              {{#link-to "notebook.active" tagName="button" class="btn btn-default btn-sm"}} Active {{/link-to}}
+              {{#link-to "notebook.completed" tagName="button" class="btn btn-default btn-sm"}} Completed {{/link-to}}
             </div>  
           </div>
         </div>
